--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               <option>3333</option>
               <option>4444</option>
             </select>
-            
-            <label for="message">Message:</label>
+
+            <label for="message">Anything else u would like to tell us?</label>
             <textarea
               id="message"
               rows="5"
