--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <div class="check">
             <label>I agree with the T&Cs. <input type="checkbox" name="agree"/></label>
             </div>
-            <button>SUBMIT</button>
+            <button type="submit" formaction="/pages/ThankYou.html">SUBMIT</button>
+            </form>
           </div>
            </form>
 </body>
